<resources>
    <string name="app_name">Fisherman_Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник по рыбалке</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_fish">Рыба</string>
    <string name="menu_bait">Наживка</string>
    <string name="menu_tackle">Снасти</string>
    <string name="menu_lure">Прикормка</string>
    <string name="menu_stories">Рыбацкие истории</string>
    <string name="menu_advices">Полезные советы</string>

    <string name="content_fish_1">Карпы (лат. Cyprinus) — род рыб семейства карповых.

Большинство видов рода обитают на юге Китая и в Юго-Восточной Азии. Исключение составляют два вида. Первый — обыкновенный сазан (Cyprinus carpio), имевший естественный ареал,
        состоявший из двух частей: водоемы Понто-Каспийско-Аральского и дальневосточного регионов[1]. Он был расселён в водоёмах Северной Америки, Австралии и Евразии за пределами
        естественного ареала, одомашнен, из него выведены породы карпа, разводимые в прудах. Второй — серебристый карп, завезенный в 1970-е годы в Канаду и США из озера Балхаш (Казахстан)
        и сильно размножившийся в отсутствие внешних врагов и отлова (из-за обилия костей американцы его не едят). В случае попадания серебристого карпа в Великие озера это грозит уничтожением
        промысловых рыб местных пород и исчезновением промыслового рыболовства, поэтому на Чикагском канале построен электрический барьер[2][3][4].

    </string>
    <string name="content_fish_2">
        Щука[1], или обыкновенная щука[1] (лат. Esox lucius), — рыба семейства щуковых. Распространена в пресных водах Евразии и Северной Америки. Живёт обычно в прибрежной зоне,
        в водных зарослях, в непроточных или слабопроточных водах. Может также встречаться и в опреснённых частях морей, например в Финском, Рижском и Куршском заливах Балтийского моря,
        в Таганрогском заливе Азовского моря. Щука хорошо выдерживает кислую реакцию воды, может комфортно жить в водоёмах с pH 4,75. При снижении содержания кислорода до 3,0—2,0 мг/л наступает
        угнетение дыхания, поэтому в заморных водоёмах щука часто погибает.

        Длина до 1,5 метров, масса до 35 килограммов (обычно до 1 метра и 8 килограммов). Тело торпедовидное, голова большая, пасть широкая. Окраска изменчивая, зависит от окружения:
        в зависимости от характера и степени развития растительности может быть серо-зеленоватая, серо-желтоватая, серо-бурая, спина темнее, бока с крупными бурыми или оливковыми пятнами,
        которые образуют поперечные полосы. Непарные плавники желтовато-серые, бурые с тёмными пятнами; парные — оранжевые. Кормится преимущественно рыбой. В некоторых озёрах встречаются
        серебристые щуки.

Самцов и самок можно отличить по форме мочеполового отверстия, которое у самцов имеет вид узкой продолговатой щели, окрашенной в цвет чрева, а у самок — овального углубления, окружённого
        валиком розового цвета.

        Тело щуки имеет удлинённую, стреловидную форму. Голова сильно удлинённая, нижняя челюсть выдаётся вперёд. Зубы на нижней челюсти имеют разный размер и служат для захвата жертвы.
        Зубы на других костях ротовой полости помельче, направлены острыми концами в глотку и могут погружаться в слизистую оболочку. Благодаря этому добыча легко проходит, а если она пытается
        вырваться, глоточные зубы поднимаются и удерживают жертву.

        Для щук характерна смена зубов на нижней челюсти: внутренняя поверхность челюсти покрыта мягкой тканью, под ней расположены ряды из 2—4 замещающих зубов, которые примыкают сзади
        к каждому действующему зубу, образуя с ним единую группу (зубную семью). Когда рабочий зуб выходит из употребления, на его место становится своим основанием соседний замещающий зуб
        той же семьи. Сначала он мягок и неустойчив, но потом плотно прирастает основой к кости челюсти и укрепляется. Зубы у щуки меняются неодновременно. В одно и то же время одни зубные
        группы заканчиваются на краю челюсти старым зубом, который уже рассасывается, другие — прочным рабочим, третьи — ещё подвижным молодым. В некоторых водоёмах смена зубов у щук усиливается
        в течение определённых сезонов, и тогда щука в этих водоёмах перестаёт брать крупную добычу, поскольку та может вырваться из пасти хищницы. Ловить её в это время трудно, так как она
        не может схватить насадку.
    </string>
    <string name="content_fish_3">
Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis) — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).

Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
        Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее
        зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6]. Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.
    </string>
    <string name="content_fish_4">
Осетры́[1][2] (лат. Acipenser) — род пресноводных, полупроходных и проходных рыб из семейства осетровых.
    </string>

    <string name="content_fish_5">Нали́м, или обыкнове́нный нали́м (мень[2])[3] (лат. Lota lota) — единственная исключительно пресноводная рыба отряда трескообразных (Gadiformes). Имеет промысловую ценность.</string>

    <string name="content_bait_1">
        Че́рви (лат. Vérmes) — установленный Линнеем тип животного царства. В настоящее время является устаревшим.
    </string>
    <string name="content_bait_2">
        Кукуру́за са́харная, также маи́с (лат. Zéa máys[2]) — однолетнее травянистое культурное растение[3], единственный культурный представитель рода Кукуруза (Zea) семейства Злаки (Poaceae).
    </string>
    <string name="content_bait_3">
        Хлеб — хлебобулочное изделие, получаемое путём выпекания теста (состоящего как минимум из муки и воды), разрыхлённого дрожжами или закваской[2].
    </string>
    <string name="content_bait_4">
        Рис (лат. Orýza) — род однолетних и многолетних травянистых растений семейства Злаки; крупяная культура.
    </string>

    <string name="content_tackle_1">
        Грузи́ло — одно из древнейших приспособлений, использовавшееся в рыбной ловле и для натяжения нитей в ткацких станках. Изготовлялось из керамики (терракоты) или камня.
    </string>
    <string name="content_tackle_2">Крючо́к рыболовный — один из главных составляющих элементов рыболовного комплекта. Служит для насаживания приманки с последующим зацеплением и удержанием рыбы при её подсекании и вываживании.</string>
    <string name="content_tackle_3">Ле́ска (уст. леса́) — любой шнур (нить), предназначенный для ловли рыбы. Служит основой для рыболовных снастей, соединяя все части оснастки в единую снасть. </string>
    <string name="content_tackle_4">Блесна́ (множ. число блёсны) — это искусственная металлическая приманка для ловли хищной рыбы.</string>

    <string name="content_lure_1">        Кукуру́за са́харная, также маи́с (лат. Zéa máys[2]) — однолетнее травянистое культурное растение[3], единственный культурный представитель рода Кукуруза (Zea) семейства Злаки (Poaceae).
</string>
    <string name="content_lure_2">        Хлеб — хлебобулочное изделие, получаемое путём выпекания теста (состоящего как минимум из муки и воды), разрыхлённого дрожжами или закваской[2].
</string>
    <string name="content_lure_3">        Рис (лат. Orýza) — род однолетних и многолетних травянистых растений семейства Злаки; крупяная культура.</string>

    <string name="content_advices_1">Перед началом рыбалки прикормите рыбу в месте ловли с помощью мелкофракционной прикормки, которая быстро и легко растворится на поверхности. Она  создаст заметное окрашенное облако, которое будет удерживать внимание рыбы.

Подкармливайте рыбу регулярно, через определенные интервалы. Для рыбалки рядом с берегом (в водоеме с быстрым течением) используйте хорошо увлажненную прикормку, которая будет растворяться при контакте с поверхностью воды.</string>
    <string name="content_advices_2">
        Весенняя рыбалка После схода льда вода начинает потихоньку прогреваться, а вместе с повышением температуры растет и активность большинства видов рыб, которая достигает пика за несколько дней до нереста. ...
Летняя рыбалка Лето – пора отпусков. ...
Рыбалка осенью ...
Зимняя рыбалка
</string>
    <string name="content_advices_3">Такие виды как: краснопёрка, густера, плотва можно ловить поплавочной и донной удочками, среди наживки можно использовать опарыш, дождевого червя и хлебный мякиш. Если первая и третья ловятся и на личинку муравья, тесто, то вторая – личинку какого-то насекомого, кукурузу.

Лещ и белый амур можно поймать с помощью все тех же поплавочной и донной удочек, а в качестве приманки можно взять зерна кукурузы, червь, что есть общим для их обоих. Так лещ с легкостью пойдет на хлеб, личинку муравья, тесто, а белый амур не откажется от вишни или черешни, можно пробовать ловить и на опарыш.

Голавль и уклейка ловятся поплавочной удочкой, а первая еще и спиннингом. Среди наживки будут черви, опарыш. Так же уклейку можно поймать и на хлеб (мякиш), мух, личинок.

Язя можно поймать поплавочной удочкой и нахлыстовой. При себе лучше иметь дождевого червя, личинку ручейника, зерна кукурузы и прочее. </string>

    <string name="content_stories_1">Старик рыбачил один  на своей  лодке в Гольфстриме. Вот уже восемьдесят
четыре дня  он ходил  в  море и не поймал ни одной рыбы. Первые сорок дней с
ним был мальчик.  Но день за  днем не  приносил  улова,  и  родители сказали
мальчику, что старик теперь уже явно  salao,  то есть "самый что ни  на есть
невезучий", и  велели  ходить в море на другой лодке, которая  действительно
привезла три хорошие рыбы в первую же неделю. Мальчику тяжело было смотреть,
как  старик каждый день возвращается ни с чем, и  он выходил на берег, чтобы
помочь ему отнести  домой  снасти или багор, гарпун и обернутый вокруг мачты
парус. Парус был весь в заплатах из мешковины и, свернутый, напоминал  знамя
наголову разбитого полка.</string>
    <string name="content_stories_2">Для птиц силки становят,
Зверей в тенета ловят,
Мышам становят пасть,
Чтоб им в нее попасть.
Подьячие крючки имеют,
Которыми ловить людей умеют
И деньги с них берут;
Об этом все согласно врут.
А уду червяком прикроя,
Поймаешь лучшего из рыб героя.
Река
Мелка
Иль глубока —
Равно для Рыбака:
Он может поимать повсюду;
Рыбак лишь кинул в омут уду,
Тут Щука приплыла и уду трях.
О, Щука, для тебя не пища, смертный страх!
Ты хочешь червяка сорвать с крючка и скушать,
Тварь бедну погубя;
Но если хочешь ты меня послушать, —
Побереги себя.</string>
    <string name="content_stories_3">Ездим на рыбалку давней компанией. Все ловят неплохо. Но постоянно «не было клева» только у Саныча. И вдруг стали замечать, что раз за разом в его улове самая большая рыба. Даже завидовали. «Рекордсмена» разоблачили случайно. Оказывается, накануне каждой рыбалки он заглядывал на рынок и покупал свои рекордные результаты.</string>

    <string name="home_second">Home Second</string>
    <string name="different_menu">Разное</string>
    <string name="button_start">Старт</string>
    <string name="main_text_size">Размер шрифта</string>
    <string name="text_settings">Настройки текста</string>
</resources>
