<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fish"
            android:icon="@mipmap/ic_fish"
            android:title="@string/menu_fish" />
        <item
            android:id="@+id/nav_bait"
            android:icon="@mipmap/ic_bait"
            android:title="@string/menu_bait" />
        <item
            android:id="@+id/nav_tackle"
            android:icon="@mipmap/ic_tackle"
            android:title="@string/menu_tackle" />
        <item
            android:id="@+id/nav_lure"
            android:icon="@mipmap/ic_lure"
            android:title="@string/menu_lure" />
    </group>
    <item
        android:menuCategory="container"
        android:title="@string/different_menu">
        <menu>

            <item
                android:id="@+id/nav_advices"
                android:icon="@mipmap/ic_advices"
                android:title="@string/menu_advices" />
            <item
                android:id="@+id/nav_stories"
                android:icon="@mipmap/ic_stories"
                android:title="@string/menu_stories" />
        </menu>
    </item>
</menu>
